--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button class="btn btn-success flex-grow-1 mx-2" onclick="adicionarAluno()">+ Adicionar
                         Aluno</button>
                     <!-- Botão para acionar o PowerBI -->
-                    <button class="btn btn-primary flex-grow-1" id="btnResumo">Resumo Evolutivo</button>
+                    <a href="https://forms.office.com/r/b163kCKfaK"><button class="btn btn-primary flex-grow-1" id="btnResumo">Resumo Evolutivo</button></a>
                 </div>
             </div>
         </div>
