Publicado no Tomcat F14 GitHub Pages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                     <a href="https://forms.office.com/r/b163kCKfaK" target="_blank">
                         <button class="btn btn-resumo flex-grow-1">📊 Resumo Evolutivo</button>
                     </a>
+
+                    <a href="https://app.powerbi.com/groups/me/reports/SEU_ID_AQUI" target="_blank">
+                        <button class="btn btn-powerbi flex-grow-1 mt-2">📈 Power BI</button>
+                    </a>
                 </div>
             </div>
         </div>
