Publicado no Tomcat F14 GitHub Pages

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
             <div class="row mx-0">
                 <div class="col-12 d-flex flex-row justify-content-between align-items-center p-3 shadow rounded">
                     <input type="text" id="nomeAluno" class="form-control w-50" placeholder="Digite o nome do aluno">
+                    
                     <button class="btn btn-adicionar flex-grow-1 mx-2" onclick="adicionarAluno()">➕ Adicionar Aluno</button>
-                    <!-- Botão para acionar o PowerBI -->
+
                     <a href="https://forms.office.com/r/b163kCKfaK" target="_blank">
                         <button class="btn btn-resumo flex-grow-1">📊 Resumo Evolutivo</button>
                     </a>
 
-                    <a href="https://app.powerbi.com/groups/me/reports/SEU_ID_AQUI" target="_blank">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZWY0NDdkNmItZGM3NC00MjE5LWIzMmUtODc5NTAwYzUyZWE0IiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" target="_blank">
                         <button class="btn btn-powerbi flex-grow-1 mt-2">📈 Power BI</button>
                     </a>
                 </div>
