Publicado no Tomcat F14 GitHub Pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </a>
 
                     <a href="https://app.powerbi.com/view?r=eyJrIjoiZWY0NDdkNmItZGM3NC00MjE5LWIzMmUtODc5NTAwYzUyZWE0IiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" target="_blank">
-                        <button class="btn btn-powerbi flex-grow-1 mt-2">📈 Power BI</button>
+                        <button class="btn btn-powerbi flex-grow-1">📈 Power BI</button>
                     </a>
                 </div>
             </div>
